integration-tests/tests/snapshots/postgres__composite_13_7346_3822.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: table_source
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(1769,2458)
    properties:
      gid = 19 (uint)
  feature: 1
    id: (none)
    geometry: POINT(1674,2518)
    properties:
      gid = 20 (uint)
  feature: 2
    id: (none)
    geometry: POINT(1762,2512)
    properties:
      gid = 21 (uint)
  feature: 3
    id: (none)
    geometry: POINT(1774,2560)
    properties:
      gid = 22 (uint)
  feature: 4
    id: (none)
    geometry: POINT(1733,2471)
    properties:
      gid = 23 (uint)
  feature: 5
    id: (none)
    geometry: POINT(1731,2492)
    properties:
      gid = 24 (uint)
  feature: 6
    id: (none)
    geometry: POINT(1722,2549)
    properties:
      gid = 25 (uint)
  feature: 7
    id: (none)
    geometry: POINT(1680,2500)
    properties:
      gid = 26 (uint)
  feature: 8
    id: (none)
    geometry: POINT(1685,2456)
    properties:
      gid = 27 (uint)
  feature: 9
    id: (none)
    geometry: POINT(1776,2433)
    properties:
      gid = 28 (uint)
=============================================================
layer: 1
  name: points1
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(1691,2474)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(1741,2475)
    properties:
      gid = 2 (uint)
  feature: 2
    id: (none)
    geometry: POINT(1787,2535)
    properties:
      gid = 1 (uint)
=============================================================
layer: 2
  name: points2
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(1755,2452)
    properties:
      gid = 3 (uint)
  feature: 1
    id: (none)
    geometry: POINT(1698,2455)
    properties:
      gid = 1 (uint)
  feature: 2
    id: (none)
    geometry: POINT(1736,2549)
    properties:
      gid = 2 (uint)
