integration-tests/tests/snapshots/postgres__composite_tilejson.snap
---
source: integration-tests/tests/postgres.rs
expression: composite
---
{
  "bounds": [
    -179.2731397013,
    -80.4617715784,
    179.1118718108,
    84.9309209512
  ],
  "description": "public.points1.geom\npublic.points2.geom",
  "name": "table_source,points1,points2",
  "tilejson": "3.0.0",
  "tiles": [
    "http://[ADDR]/table_source,points1,points2/{z}/{x}/{y}"
  ],
  "vector_layers": [
    {
      "fields": {
        "gid": "int4"
      },
      "id": "table_source"
    },
    {
      "fields": {
        "gid": "int4"
      },
      "id": "points1"
    },
    {
      "fields": {
        "gid": "int4"
      },
      "id": "points2"
    }
  ]
}
